<resources>
        <string name="app_name">Basic Calculator</string>
        <string name="plus">+</string>
        <string name="minus">-</string>
        <string name="multi">*</string>
        <string name="divide">/</string>
        <string name="enter_second_value">Enter second value</string>
        <string name="enter_first_value">Enter first value</string>
        <string name="todo">TODO</string>
        <string name="legendry_softwares">Legendry Softwares</string>
        <string name="l_s">L.S.</string>
        <string name="Anil">By Anil S. Yadav</string>
</resources>