<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_gravity="center"
    android:background="#F6F6F6"
    android:orientation="vertical"
    tools:context=".MainActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_gravity="center"
        android:layout_marginLeft="40dp"
        android:layout_marginRight="40dp"
        android:background="#F6F6F6"

        android:orientation="vertical">

        <ImageView
            android:id="@+id/logo"
            android:layout_width="140dp"
            android:layout_height="140dp"
            android:layout_gravity="center"
            android:layout_marginTop="40dp"
            android:contentDescription="@string/todo"
            app:srcCompat="@drawable/yellow" />

        <EditText
            android:id="@+id/firstValue"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:autofillHints=""
            android:background="@drawable/input_design"
            android:ems="10"
            android:hint="@string/enter_first_value"
            android:inputType="number"
            android:minHeight="48dp"
            android:padding="10dp"
            android:textColorHint="#757575" />

        <EditText
            android:id="@+id/secondvalue"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:autofillHints=""
            android:background="@drawable/input_design"
            android:ems="10"
            android:hint="@string/enter_second_value"
            android:inputType="number"
            android:minHeight="48dp"
            android:padding="10dp"
            android:textColorHint="#757575" />

        <TextView
            android:id="@+id/tv_1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:layout_marginBottom="10dp"
            android:padding="10dp"
            android:textSize="20sp"
            android:textStyle="bold" />

        <Button
            android:id="@+id/btn_plus"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:backgroundTint="#151515"
            android:padding="10dp"
            android:text="@string/plus"
            android:textColor="#FFC107"
            android:textSize="25sp"
            android:textStyle="bold"
            app:cornerRadius="30dp" />

        <Button
            android:id="@+id/btn_minus"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:backgroundTint="#151515"
            android:padding="10dp"
            android:text="@string/minus"
            android:textColor="#FFC107"
            android:textSize="25sp"
            android:textStyle="bold"
            app:cornerRadius="30dp" />

        <Button
            android:id="@+id/btn_multi"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:backgroundTint="#151515"
            android:padding="10dp"
            android:text="@string/multi"
            android:textColor="#FFC107"
            android:textSize="25sp"
            android:textStyle="bold"
            app:cornerRadius="30dp" />

        <Button
            android:id="@+id/btn_divide"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:backgroundTint="#151515"
            android:padding="10dp"
            android:text="@string/divide"
            android:textColor="#FFC107"
            android:textSize="25sp"
            android:textStyle="bold"
            app:cornerRadius="30dp" />

        <TextView
            android:id="@+id/textView2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="80dp"
            android:gravity="center"
            android:text="@string/l_s"
            android:textColor="#373737"
            android:textSize="20sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/textView3"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="5dp"
            android:gravity="center"
            android:text="@string/legendry_softwares"
            android:textColor="#535353"
            android:textSize="14sp" />

    </LinearLayout>

</LinearLayout>